src/libqcombobox.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QComboBox QComboBox;
typedef struct QCompleter QCompleter;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLineEdit QLineEdit;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionComboBox QStyleOptionComboBox;
typedef struct QValidator QValidator;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QComboBox* QComboBox_new(QWidget* parent);
QComboBox* QComboBox_new2();
QMetaObject* QComboBox_MetaObject(const QComboBox* self);
void* QComboBox_Metacast(QComboBox* self, const char* param1);
int QComboBox_Metacall(QComboBox* self, int param1, int param2, void** param3);
libqt_string QComboBox_Tr(const char* s);
int QComboBox_MaxVisibleItems(const QComboBox* self);
void QComboBox_SetMaxVisibleItems(QComboBox* self, int maxItems);
int QComboBox_Count(const QComboBox* self);
void QComboBox_SetMaxCount(QComboBox* self, int max);
int QComboBox_MaxCount(const QComboBox* self);
bool QComboBox_DuplicatesEnabled(const QComboBox* self);
void QComboBox_SetDuplicatesEnabled(QComboBox* self, bool enable);
void QComboBox_SetFrame(QComboBox* self, bool frame);
bool QComboBox_HasFrame(const QComboBox* self);
int QComboBox_FindText(const QComboBox* self, libqt_string text);
int QComboBox_FindData(const QComboBox* self, QVariant* data);
int QComboBox_InsertPolicy(const QComboBox* self);
void QComboBox_SetInsertPolicy(QComboBox* self, int policy);
int QComboBox_SizeAdjustPolicy(const QComboBox* self);
void QComboBox_SetSizeAdjustPolicy(QComboBox* self, int policy);
int QComboBox_MinimumContentsLength(const QComboBox* self);
void QComboBox_SetMinimumContentsLength(QComboBox* self, int characters);
QSize* QComboBox_IconSize(const QComboBox* self);
void QComboBox_SetIconSize(QComboBox* self, QSize* size);
void QComboBox_SetPlaceholderText(QComboBox* self, libqt_string placeholderText);
libqt_string QComboBox_PlaceholderText(const QComboBox* self);
bool QComboBox_IsEditable(const QComboBox* self);
void QComboBox_SetEditable(QComboBox* self, bool editable);
void QComboBox_SetLineEdit(QComboBox* self, QLineEdit* edit);
QLineEdit* QComboBox_LineEdit(const QComboBox* self);
void QComboBox_SetValidator(QComboBox* self, QValidator* v);
QValidator* QComboBox_Validator(const QComboBox* self);
void QComboBox_SetCompleter(QComboBox* self, QCompleter* c);
QCompleter* QComboBox_Completer(const QComboBox* self);
QAbstractItemDelegate* QComboBox_ItemDelegate(const QComboBox* self);
void QComboBox_SetItemDelegate(QComboBox* self, QAbstractItemDelegate* delegate);
QAbstractItemModel* QComboBox_Model(const QComboBox* self);
void QComboBox_SetModel(QComboBox* self, QAbstractItemModel* model);
QModelIndex* QComboBox_RootModelIndex(const QComboBox* self);
void QComboBox_SetRootModelIndex(QComboBox* self, QModelIndex* index);
int QComboBox_ModelColumn(const QComboBox* self);
void QComboBox_SetModelColumn(QComboBox* self, int visibleColumn);
int QComboBox_CurrentIndex(const QComboBox* self);
libqt_string QComboBox_CurrentText(const QComboBox* self);
QVariant* QComboBox_CurrentData(const QComboBox* self);
libqt_string QComboBox_ItemText(const QComboBox* self, int index);
QIcon* QComboBox_ItemIcon(const QComboBox* self, int index);
QVariant* QComboBox_ItemData(const QComboBox* self, int index);
void QComboBox_AddItem(QComboBox* self, libqt_string text);
void QComboBox_AddItem2(QComboBox* self, QIcon* icon, libqt_string text);
void QComboBox_AddItems(QComboBox* self, libqt_list /* of libqt_string */ texts);
void QComboBox_InsertItem(QComboBox* self, int index, libqt_string text);
void QComboBox_InsertItem2(QComboBox* self, int index, QIcon* icon, libqt_string text);
void QComboBox_InsertItems(QComboBox* self, int index, libqt_list /* of libqt_string */ texts);
void QComboBox_InsertSeparator(QComboBox* self, int index);
void QComboBox_RemoveItem(QComboBox* self, int index);
void QComboBox_SetItemText(QComboBox* self, int index, libqt_string text);
void QComboBox_SetItemIcon(QComboBox* self, int index, QIcon* icon);
void QComboBox_SetItemData(QComboBox* self, int index, QVariant* value);
QAbstractItemView* QComboBox_View(const QComboBox* self);
void QComboBox_SetView(QComboBox* self, QAbstractItemView* itemView);
QSize* QComboBox_SizeHint(const QComboBox* self);
QSize* QComboBox_MinimumSizeHint(const QComboBox* self);
void QComboBox_ShowPopup(QComboBox* self);
void QComboBox_HidePopup(QComboBox* self);
bool QComboBox_Event(QComboBox* self, QEvent* event);
QVariant* QComboBox_InputMethodQuery(const QComboBox* self, int param1);
QVariant* QComboBox_InputMethodQuery2(const QComboBox* self, int query, QVariant* argument);
void QComboBox_Clear(QComboBox* self);
void QComboBox_ClearEditText(QComboBox* self);
void QComboBox_SetEditText(QComboBox* self, libqt_string text);
void QComboBox_SetCurrentIndex(QComboBox* self, int index);
void QComboBox_SetCurrentText(QComboBox* self, libqt_string text);
void QComboBox_EditTextChanged(QComboBox* self, libqt_string param1);
void QComboBox_Activated(QComboBox* self, int index);
void QComboBox_TextActivated(QComboBox* self, libqt_string param1);
void QComboBox_Highlighted(QComboBox* self, int index);
void QComboBox_TextHighlighted(QComboBox* self, libqt_string param1);
void QComboBox_CurrentIndexChanged(QComboBox* self, int index);
void QComboBox_CurrentTextChanged(QComboBox* self, libqt_string param1);
void QComboBox_FocusInEvent(QComboBox* self, QFocusEvent* e);
void QComboBox_FocusOutEvent(QComboBox* self, QFocusEvent* e);
void QComboBox_ChangeEvent(QComboBox* self, QEvent* e);
void QComboBox_ResizeEvent(QComboBox* self, QResizeEvent* e);
void QComboBox_PaintEvent(QComboBox* self, QPaintEvent* e);
void QComboBox_ShowEvent(QComboBox* self, QShowEvent* e);
void QComboBox_HideEvent(QComboBox* self, QHideEvent* e);
void QComboBox_MousePressEvent(QComboBox* self, QMouseEvent* e);
void QComboBox_MouseReleaseEvent(QComboBox* self, QMouseEvent* e);
void QComboBox_KeyPressEvent(QComboBox* self, QKeyEvent* e);
void QComboBox_KeyReleaseEvent(QComboBox* self, QKeyEvent* e);
void QComboBox_WheelEvent(QComboBox* self, QWheelEvent* e);
void QComboBox_ContextMenuEvent(QComboBox* self, QContextMenuEvent* e);
void QComboBox_InputMethodEvent(QComboBox* self, QInputMethodEvent* param1);
void QComboBox_InitStyleOption(const QComboBox* self, QStyleOptionComboBox* option);
libqt_string QComboBox_Tr2(const char* s, const char* c);
libqt_string QComboBox_Tr3(const char* s, const char* c, int n);
int QComboBox_FindText2(const QComboBox* self, libqt_string text, int flags);
int QComboBox_FindData2(const QComboBox* self, QVariant* data, int role);
int QComboBox_FindData3(const QComboBox* self, QVariant* data, int role, int flags);
QVariant* QComboBox_CurrentData1(const QComboBox* self, int role);
QVariant* QComboBox_ItemData2(const QComboBox* self, int index, int role);